--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=SpringBootPrj
 server.port=8080
+
+# MySQL ?? ??
+spring.datasource.url=jdbc:mysql://localhost:3305/authority
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
