--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.34</version> <!-- 최신 버전 확인 후 사용 -->
+          <scope>provided</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
