--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=SpringBootPrj
 server.port=8080
 
-# MySQL ?? ??
-spring.datasource.url=jdbc:mysql://localhost:3305/authority
-spring.datasource.username=root
-spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5433/mydatabase
+spring.datasource.username=myuser
+spring.datasource.password=mypassword
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# src/main/resources/application.properties
+#mybatis.config-location=classpath:mybatis-config.xml
+mybatis.mapper-locations=classpath:mappers/*.xml
+
