--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=SpringBootPrj
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/mydatabase
-spring.datasource.username=myuser
-spring.datasource.password=mypassword
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.username=root
+spring.datasource.password=password
 
 # src/main/resources/application.properties
 #mybatis.config-location=classpath:mybatis-config.xml
-mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.kr.travel.springbootprj.users.dto
+
+spring.security.user.name=myuser
+spring.security.user.password=mypassword
+
 
